# Stan-Powietrza-Aplikacja

./: CMakeLists.txt  CMakePresets.json  main.cpp  main.h
database/: data.json  sensors.json  stations.json
